# opulens

./: .gitignore  Cargo.toml  config.toml  config.toml.template  log.toml
docker/: .env.template  docker-compose.yml  init-mongo.js
docs/: book.toml
docs/src/: SUMMARY.md  intro.md  mvp.md
src/: config.rs  main.rs  uuid.rs
src/connectors/: mod.rs  mongodb.rs
src/models/: asset.rs  context.rs  holding.rs  mod.rs  ownership.rs  transaction.rs  upload.rs  user.rs
src/routes/: mod.rs  root.rs  upload.rs  user.rs
src/service/: mod.rs  mongodb.rs
