[package]
name = "opulens"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log", "log-always"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
env_logger = "0.11.5"
log = "0.4.22"
chrono = { version = "0.4.38", features = ["serde"] }
multer = { version = "3.1.0", features = ["serde", "serde_json", "tokio"] }
bytes = { version = "1.9.0", features = ["serde"] }
