[package]
name = "opulens"
version = "0.1.0"
edition = "2021"

[features]
default = ["mongodb"]
mongodb = ["dep:mongodb", "dep:bson"]

[dependencies]
axum = { version = "0.7.9", features = ["macros", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log", "log-always"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4.22"
chrono = { version = "0.4.38", features = ["serde"] }
multer = { version = "3.1.0", features = ["serde", "serde_json", "tokio"] }
bytes = { version = "1.9.0", features = ["serde"] }
mongodb = { version = "3.1.0", optional = true }
bson = { version = "2.13.0", features = ["chrono-0_4", "uuid-1"], optional = true }
clap = { version = "4.5.23", features = ["derive", "env"] }
toml = { version = "0.8.19", features = ["parse"] }
log4rs = { version = "1.3.0", features = ["toml", "toml_format", "file_appender"] }
